Cosmetics && fixes
